--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
+    "@expo/vector-icons": "^12.0.5",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.9.4",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-font": "^9.1.0",
