--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
+    "react-navigation-drawer": "^2.7.1",
     "react-navigation-header-buttons": "^7.0.1",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.4",
