--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^6.1.3",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^5.9.7",
     "@react-navigation/stack": "^6.0.6",
     "expo": "^42.0.0",
     "expo-app-loading": "^1.0.3",
@@ -24,7 +24,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
